added achievement section

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             <li class="active"><a href="#header">Home</a></li>
             <li><a href="#about">About Me</a></li>
             <li><a href="#events">Events</a></li>
+            <li><a href="#awards">Achievements</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#blogs">Work</a></li>
             <li><a href="#social">Connect</a></li>
@@ -102,7 +103,7 @@
       </section>
       <!-- End About Section -->
 
-      <!-- ======= Services Section ======= -->
+      <!-- ======= Event Section ======= -->
       <section id="events" class="services section-bg">
         <div class="container">
           <div class="section-title" data-aos="fade-up">
@@ -174,11 +175,9 @@
               data-aos-delay="400"
             >
               <div class="icon-box">
-                <div class="icon"><i class="fab fa-tensorflow"></i></div>
                 <h4 class="title"><a>Recur Loop</a></h4>
                 <p class="description">
-                  Recur Loop is a coding competition which I conducted as a Coding Ninjas Campus Ambassador
-                </p>
+                  Recur Loop is a coding competition which I conducted as a Coding Ninjas Campus Ambassador</p>
               </div>
             </div>
             <div
@@ -198,15 +197,14 @@
               class="col-md-6 col-lg-3 d-flex align-items-stretch"
               data-aos="zoom-in"
               data-aos-delay="400"
-            ><a href="https://www.eventbrite.com/e/pie-ai-bangalore-mediapipe-tasks-api-bootcamp-tickets-577711048297" target="_blank">
+            ><a href="https://www.eventbrite.com/e/pie-ai-bangalore-mediapipe-tasks-api-bootcamp-tickets-577711048297">
               <div class="icon-box">
-                <h4 class="title"><a>MediaPipe Tasks API Bootcamp</a></h4>
+                <h4 class="title">MediaPipe Tasks API Bootcamp</h4>
                 <p class="description">
-                 In the Mediapipe Bootcamp, I explained the need of Mediapipe and its applications. And later the participants implemented Mediapipe Tasks projects in Audio, Image and Text domain. 
-                
+                 I explained the need of Mediapipe and its applications. And later the participants implemented Mediapipe Tasks projects in Audio, Image and Text domain. 
                 </p>
               </div>
-               </a>
+            </a>
             </div>
             <div
               class="col-md-6 col-lg-3 d-flex align-items-stretch"
@@ -217,6 +215,116 @@
                 <h4 class="title"><a>Gentle Dive into Stable Diffusion</a></h4>
                 <p class="description">
                  Upcoming - 15th April 2023
+                </p>
+              </div>
+            </div>
+        </div>
+      </section>
+      <!-- End Events Section -->
+
+      <!-- ======= Awards Section ======= -->
+      <section id="awards" class="services section-bg">
+        <div class="container">
+          <div class="section-title" data-aos="fade-up">
+            <h2>Achievements</h2>
+            <p>I love Hackathons and Competitions</p>
+          </div>
+
+          <div class="row">
+            <div
+              class="col-md-6 col-lg-3 d-flex align-items-stretch"
+              data-aos="zoom-in"
+              data-aos-delay="400"
+            >
+              <div class="icon-box">
+                <h4 class="title">Optimize Prime Hackathon</h4>
+                <p class="description">
+                   Won 1st price in Optimize Prime organized by Phase Shift 21, BMSCE. 
+                </p>
+              </div>
+            </div>
+
+            <div
+              class="col-md-6 col-lg-3 d-flex align-items-stretch"
+              data-aos="zoom-in"
+              data-aos-delay="400"
+            >
+             <div class="icon-box">
+                <h4 class="title">Quantum Hacks Hackathon</h4>
+                <p class="description">
+                 Won 1st prize for the problem statement given by Teksands.ai organized by QuantumX, NHCE
+                </p>
+              </div>
+            </div>
+            
+            <div
+              class="col-md-6 col-lg-3 d-flex align-items-stretch"
+              data-aos="zoom-in"
+              data-aos-delay="400"
+            >
+              <div class="icon-box">
+                <h4 class="title">IIC Ideathon</h4>
+                <p class="description">
+                 Presented my idea on a case study using Attention is all you need model and won 1st prize in the Ideathon. 
+                </p>
+              </div>
+            </div>
+            <div
+              class="col-md-6 col-lg-3 d-flex align-items-stretch"
+              data-aos="zoom-in"
+              data-aos-delay="400"
+            >
+              <div class="icon-box">
+                <h4 class="title">Hackaphasia Hackathon</h4>
+                <p class="description">
+                  Won 2nd prize in Hackaphasia Hackathon organized by Phase Shift 22, BMSCE
+                </p>
+              </div>
+            </div>
+            <div
+              class="col-md-6 col-lg-3 d-flex align-items-stretch"
+              data-aos="zoom-in"
+              data-aos-delay="400"
+            >
+              <div class="icon-box">
+                <h4 class="title">Intuit22</h4>
+                <p class="description">
+                  Won 1st prize in Intuit22 project exhibition for our project on Hyperspectral Image Compression organized by CIT. 
+                </p>
+              </div>
+            </div>
+            <div
+              class="col-md-6 col-lg-3 d-flex align-items-stretch"
+              data-aos="zoom-in"
+              data-aos-delay="400"
+            >
+              <div class="icon-box">
+                <h4 class="title"><a>Technical Scripter</a></h4>
+                <p class="description">
+                  Technical Scripter 23 is a Technical Content writing competition organized by GeeksForGeeks and I my article ranked at 9th position.
+                </p>
+              </div>
+            </div>
+            <div
+              class="col-md-6 col-lg-3 d-flex align-items-stretch"
+              data-aos="zoom-in"
+              data-aos-delay="400"
+            ><div class="icon-box">
+                <h4 class="title">Geeks Premier League</h4>
+                <p class="description">
+                  My article on Implementing Photoshop High Pass Filter (HPF) in python was ranked 22nd in Geeks Premier League conducted by Geeksforgeeks
+                </p>
+              </div>
+            </div>
+            <div
+              class="col-md-6 col-lg-3 d-flex align-items-stretch"
+              data-aos="zoom-in"
+              data-aos-delay="400"
+            >
+              <div class="icon-box">
+                <h4 class="title"><a>IEEE Ideathon</a></h4>
+                <p class="description">
+                 Won 2nd prize in Ideathon celebrated on IEEE 2022 Day organized by CIT. 
                 </p>
               </div>
             </div>
