dekh ai project update

--- a/index.html
+++ b/index.html
@@ -505,14 +505,14 @@
                 />
                 <div class="portfolio-links">
                   <a
-                    href="https://github.com/lucifertrj/EuroSat-Satellite-CNN"
-                    title="eurosat"
+                    href="https://github.com/lucifertrj/Dekh.ai"
+                    title="dekhai"
                     target="_blank"
                     ><i class="fab fa-github"></i
                   ></a>
                 </div>
                 <div class="portfolio-info">
-                  <h4>Eurosat Satellite- CNN</h4>
+                  <h4>Dekh.ai</h4>
                 </div>
               </div>
             </div>
