--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
               data-aos-delay="400"
             >
               <div class="icon-box">
-                <h4 class="title">Optimize Prime Hackathon</h4>
+                <a href="https://drive.google.com/file/d/1iKlEBd9tbFcOOk9WEOEsdNgordJbdFcU/view?usp=sharing"><h4 class="title">Optimize Prime Hackathon</h4></a>
                 <p class="description">
                    Won 1st price in Optimize Prime organized by Phase Shift 21, BMSCE. 
                 </p>
@@ -275,7 +275,7 @@
               data-aos-delay="400"
             >
               <div class="icon-box">
-                <h4 class="title">Hackaphasia Hackathon</h4>
+                <a href="https://drive.google.com/file/d/1b34N80ObHITQq6cdUjdiaNr42UIyH-ic/view?usp=sharing"><h4 class="title">Hackaphasia Hackathon</h4></a>
                 <p class="description">
                   Won 2nd prize in Hackaphasia Hackathon organized by Phase Shift 22, BMSCE
                 </p>
@@ -287,7 +287,7 @@
               data-aos-delay="400"
             >
               <div class="icon-box">
-                <h4 class="title">Intuit22</h4>
+                <a href="https://drive.google.com/file/d/1UXcyW6ZnkIwRywmz52WUD1sAl8mNKbfU/view?usp=sharing"><h4 class="title">Intuit22</h4></a>
                 <p class="description">
                   Won 1st prize in Intuit22 project exhibition for our project on Hyperspectral Image Compression organized by CIT. 
                 </p>
@@ -299,7 +299,7 @@
               data-aos-delay="400"
             >
               <div class="icon-box">
-                <h4 class="title"><a>Technical Scripter</a></h4>
+                <a href="https://www.geeksforgeeks.org/technical-scripter-2022-results/"><h4 class="title">Technical Scripter</h4></a>
                 <p class="description">
                   Technical Scripter 23 is a Technical Content writing competition organized by GeeksForGeeks and I my article ranked at 9th position.
                 </p>
@@ -310,7 +310,7 @@
               data-aos="zoom-in"
               data-aos-delay="400"
             ><div class="icon-box">
-                <h4 class="title">Geeks Premier League</h4>
+                <a href="https://drive.google.com/file/d/1nbKKWULEEz_X4aUo9MGgE6gH3-rbpC63/view?usp=sharing"><h4 class="title">Geeks Premier League</h4></a>
                 <p class="description">
                   My article on Implementing Photoshop High Pass Filter (HPF) in python was ranked 22nd in Geeks Premier League conducted by Geeksforgeeks
                 </p>
