new updates- Hackathon and gsoc

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
           <div class="col-lg-6 pt-5 pt-lg-0 order-2 order-lg-1">
             <h1>Its Me...</h1>
             <h1>Tarun</h1>
-            <h3 class="col-mt-4">Know more about me...</h3>
-            <a href="#about" class="btn-get-started">Get started</a>          
+            <h3 class="col-mt-4">GSoC23 caMicroscope || Community Manager at AI Planet</h3>
+            <a href="#about" class="btn-get-started">Know more</a>          
             </div>
           <div class="col-lg-6 order-1 order-lg-1">
             <img
@@ -87,7 +87,7 @@
               <h3 data-aos="fade-up">About Me</h3>
               <p></p>
               <p data-aos="fade-up" data-aos-delay="90">
-                Hello! My name is Tarun R Jain, and I'm currently in my final year of Electronics and Communication Engineering (BE). I'm a passionate coder with expertise in Machine Learning, Image Processing, and Deep Learning. I've published over 80 blog articles documenting my coding journey, and I'm actively involved in various communities, including <a href="https://huggingface.co/lucifertrj">Hugging Face-Keras Working Group</a>, <a href="https://www.deeplearning.ai/events/">Deep Learning AI- Bangalore Ambassador</a>, <a href="https://www.meetup.com/tfugblr/members/?op=leaders">TensorFlow User Group Bangalore- Assistant Organizer</a> and <a href="https://auth.geeksforgeeks.org/user/jaintarun/articles">Geeksforgeeks- Technical content writer</a>.
+                Hello! My name is Tarun R Jain. I'm a passionate coder with expertise in Machine Learning, Image Processing, and Deep Learning. I've published over 80 blog articles documenting my coding journey, and I'm actively involved in various communities, including <a href="https://huggingface.co/lucifertrj">Hugging Face-Keras Working Group</a>, <a href="https://www.deeplearning.ai/events/">Deep Learning AI- Bangalore Ambassador</a>, <a href="https://www.meetup.com/tfugblr/members/?op=leaders">TensorFlow User Group Bangalore- Assistant Organizer</a> and <a href="https://auth.geeksforgeeks.org/user/jaintarun/articles">Geeksforgeeks- Technical content writer</a>.
               </p>
               <p data-aos="fade-up" data-aos-delay="90">
                 What I love most about coding is the ability to create something new and solve complex problems. I'm constantly learning and experimenting with new techniques to improve my skills and knowledge. In addition to my technical pursuits, I also enjoy watching anime and reading manga in my free time. </p>
@@ -229,7 +229,21 @@
             <h2>Achievements</h2>
             <p>I love Hackathons and Competitions</p>
           </div>
-
+          
+          <div class="row">
+            <div
+              class="col-md-6 col-lg-3 d-flex align-items-stretch"
+              data-aos="zoom-in"
+              data-aos-delay="400"
+            >
+              <div class="icon-box">
+                <a href="https://drive.google.com/file/d/1oZCwtatEji5DE3MsqHyo6fXVFWHAZ5jP/view?usp=sharing"><h4 class="title">PW Skills Hackathon 8.0</h4></a>
+                <p class="description">
+                   Won 1st price in Hackathon 8.0 organized by iNeuron AI and PW Skills. 
+                </p>
+              </div>
+            </div>
+            
           <div class="row">
             <div
               class="col-md-6 col-lg-3 d-flex align-items-stretch"
@@ -263,9 +277,9 @@
               data-aos-delay="400"
             >
               <div class="icon-box">
-                <h4 class="title">IIC Ideathon</h4>
+                <h4 class="title">Intuit23</h4>
                 <p class="description">
-                 Presented my idea on a case study using Attention is all you need model and won 1st prize in the Ideathon. 
+                 Our team won Best Innovation Project Award in Intuit23 Project exhibition.  
                 </p>
               </div>
             </div>
