events update and layout fix

--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-6 pt-5 pt-lg-0 order-2 order-lg-1">
-            <h1>Its Me...</h1>
-            <h1>Tarun</h1>
-            <h3 class="col-mt-4">GSoC23 caMicroscope || Community Manager at AI Planet</h3>
+            <h3>Its Me...</h3>
+            <h2>Tarun Jain</h2>
+            <h4 class="col-mt-4">GSoC'23 caMicroscope <br/> DevRel & Community Manager at AI Planet</h4>
             <a href="#about" class="btn-get-started">Know more</a>          
             </div>
           <div class="col-lg-6 order-1 order-lg-1">
@@ -210,13 +210,53 @@
               class="col-md-6 col-lg-3 d-flex align-items-stretch"
               data-aos="zoom-in"
               data-aos-delay="400"
-            >
+            ><a href="https://www.eventbrite.com/e/pie-ai-bangalore-getting-started-with-ml-world-tickets-672454729197?aff=oddtdtcreator">
               <div class="icon-box">
-                <h4 class="title"><a>Gentle Dive into Stable Diffusion</a></h4>
+                <h4 class="title">Getting started with ML world</h4>
                 <p class="description">
-                 Upcoming - 15th April 2023
+                  In this event, I mentored students on how to get started with Sklearn and its best practices. 
                 </p>
               </div>
+            </a>
+            </div>
+            <div
+              class="col-md-6 col-lg-3 d-flex align-items-stretch"
+              data-aos="zoom-in"
+              data-aos-delay="400"
+            ><a href="https://www.eventbrite.com/e/pie-ai-bangalore-fine-tuning-in-llms-tickets-689694533917?aff=oddtdtcreator">
+              <div class="icon-box">
+                <h4 class="title">Fine Tune LLMs</h4>
+                <p class="description">
+                  In this event, I demonstrated how to Fine Tune LLama2 using LoRA peft on custom data for free
+                </p>
+              </div>
+            </a>
+            </div>
+            <div
+              class="col-md-6 col-lg-3 d-flex align-items-stretch"
+              data-aos="zoom-in"
+              data-aos-delay="400"
+            ><a href="https://www.eventbrite.com/e/pie-ai-bangalore-object-tracking-bootcamp-tickets-608788802697?aff=oddtdtcreator">
+              <div class="icon-box">
+                <h4 class="title">Object Tracking Bootcamp</h4>
+                <p class="description">
+                  This Bootcamp was focused on educating the audience about Object Detection and Object Tracking. We worked on Vechicle tracking
+                </p>
+              </div>
+            </a>
+            </div>
+            <div
+              class="col-md-6 col-lg-3 d-flex align-items-stretch"
+              data-aos="zoom-in"
+              data-aos-delay="400"
+            ><a href="https://www.eventbrite.com/e/pie-ai-bangalore-langchain-recipes-tickets-689696118657?aff=oddtdtcreator">
+              <div class="icon-box">
+                <h4 class="title">Langchain Recipes</h4>
+                <p class="description">
+                  In this event, I explained the basic components used in Langchain and at the end of my session I demonstrated a Q&A project. 
+                </p>
+              </div>
+            </a>
             </div>
         </div>
       </section>
@@ -243,8 +283,7 @@
                 </p>
               </div>
             </div>
-            
-          <div class="row">
+    
             <div
               class="col-md-6 col-lg-3 d-flex align-items-stretch"
               data-aos="zoom-in"
@@ -283,6 +322,7 @@
                 </p>
               </div>
             </div>
+
             <div
               class="col-md-6 col-lg-3 d-flex align-items-stretch"
               data-aos="zoom-in"
