--- a/index.html
+++ b/index.html
@@ -450,20 +450,41 @@
             <div class="col-lg-4 col-md-6 portfolio-item filter-html">
               <div class="portfolio-wrap">
                 <img
-                  src="https://images.unsplash.com/photo-1496084629927-948ceb3952ae?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
+                  src="https://images.unsplash.com/photo-1471193945509-9ad0617afabf?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80"
                   class="img-fluid"
                   alt=""
                 />
                 <div class="portfolio-links"> 
                   <a
-                    href="https://github.com/lucifertrj/Image_Seg-UNET"
+                    href="https://github.com/raghavyuva/a-gr-i"
                     title="Github"
                     target="_blank"
                     ><i class="fab fa-github"></i
                   ></a>
                 </div>
                 <div class="portfolio-info">
-                  <h4>Image Segementation Using UNET</h4>
+                  <h4>A-gr-I</h4>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item filter-next">
+              <div class="portfolio-wrap">
+                <img
+                  src="https://images.unsplash.com/photo-1601987177651-8edfe6c20009?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80"
+                  class="img-fluid"
+                  alt=""
+                />
+                <div class="portfolio-links">
+                  <a
+                    href="https://github.com/lucifertrj/Dekh.ai"
+                    title="dekhai"
+                    target="_blank"
+                    ><i class="fab fa-github"></i
+                  ></a>
+                </div>
+                <div class="portfolio-info">
+                  <h4>Dekh.ai</h4>
                 </div>
               </div>
             </div>
@@ -491,19 +512,19 @@
             <div class="col-lg-4 col-md-6 portfolio-item filter-js">
               <div class="portfolio-wrap">
                 <img
-                  src="https://images.unsplash.com/photo-1599929219210-7c422e4d5208?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
+                  src="https://images.unsplash.com/photo-1499028344343-cd173ffc68a9?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80"
                   class="img-fluid"
                   alt=""
                 />
                 <div class="portfolio-links">
                   <a
-                    href="https://github.com/lucifertrj/Multi_Verse"
+                    href="https://github.com/lucifertrj/FitDine"
                     target="_blank"
                     ><i class="fab fa-github"></i
                   ></a>
                 </div>
                 <div class="portfolio-info">
-                  <h4>MultiVerse</h4>
+                  <h4>FitDine (Private)</h4>
                 </div>
               </div>
             </div>
@@ -545,28 +566,7 @@
                   ></a>
                 </div>
                 <div class="portfolio-info">
-                  <h4>Hyperspectral Image Compression Using MATLAB</h4>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6 portfolio-item filter-next">
-              <div class="portfolio-wrap">
-                <img
-                  src="https://images.unsplash.com/flagged/photo-1574848487348-533aaf72833e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
-                  class="img-fluid"
-                  alt=""
-                />
-                <div class="portfolio-links">
-                  <a
-                    href="https://github.com/lucifertrj/Dekh.ai"
-                    title="dekhai"
-                    target="_blank"
-                    ><i class="fab fa-github"></i
-                  ></a>
-                </div>
-                <div class="portfolio-info">
-                  <h4>Dekh.ai</h4>
+                  <h4>Hyperspectral Image Compression Using MATLAB (Hardware)</h4>
                 </div>
               </div>
             </div>
