update banner image

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
               <div class="icon-box">
                 <h4 class="title">ChatGPT Architecture Breakdown</h4>
                 <p class="description">
-                  In this event I spoke on RLHF, InstructGPT, Transformers and PPO algorithm used to build ChatGPT. 
+                  In this event, I spoke on RLHF, InstructGPT, Transformers and PPO algorithm used to build ChatGPT. 
                 </p>
               </div>
               </a>
@@ -150,7 +150,7 @@
               <div class="icon-box">
                 <h4 class="title">Image Processing Workshop</h4>
                 <p class="description">
-                  In this Workshop, I conducted an Hands-on session on Image processing algorithm using MATLAB programming. 
+                  In this Workshop, I conducted a Hands-on session on Image processing algorithms using MATLAB programming. 
                 </p>
               </div>
             </a>
@@ -164,7 +164,7 @@
               <div class="icon-box">
                 <h4 class="title">Deep Learning Workshop- GDSC</h4>
                 <p class="description">
-                 I Spoke for two days on Deep Learning with TensorFlow at Nitte Meenakshi Institute of Technology.(hands-on)
+                 I Spoke for two days on Deep Learning with TensorFlow at Nitte Meenakshi Institute of Technology. (hands-on)
                 </p>
               </div>
             </a>
@@ -177,7 +177,7 @@
               <div class="icon-box">
                 <h4 class="title"><a>Recur Loop</a></h4>
                 <p class="description">
-                  Recur Loop is a coding competition which I conducted as a Coding Ninjas Campus Ambassador</p>
+                  Recur Loop is a coding competition that I conducted as a Coding Ninjas Campus Ambassador</p>
               </div>
             </div>
             <div
@@ -201,7 +201,7 @@
               <div class="icon-box">
                 <h4 class="title">MediaPipe Tasks API Bootcamp</h4>
                 <p class="description">
-                 I explained the need of Mediapipe and its applications. And later the participants implemented Mediapipe Tasks projects in Audio, Image and Text domain. 
+                 I explained the need for Mediapipe and its applications. And later the participants implemented Mediapipe Tasks projects in the Audio, Image and Text domains. 
                 </p>
               </div>
             </a>
@@ -240,7 +240,7 @@
               <div class="icon-box">
                 <h4 class="title">Object Tracking Bootcamp</h4>
                 <p class="description">
-                  This Bootcamp was focused on educating the audience about Object Detection and Object Tracking. We worked on Vechicle tracking
+                  This Bootcamp was focused on educating the audience about Object Detection and Object Tracking. We worked on Vehicle tracking
                 </p>
               </div>
             </a>
@@ -279,7 +279,7 @@
               <div class="icon-box">
                 <a href="https://drive.google.com/file/d/1oZCwtatEji5DE3MsqHyo6fXVFWHAZ5jP/view?usp=sharing"><h4 class="title">PW Skills Hackathon 8.0</h4></a>
                 <p class="description">
-                   Won 1st price in Hackathon 8.0 organized by iNeuron AI and PW Skills. 
+                   Won 1st prize in Hackathon 8.0 organized by iNeuron AI and PW Skills. 
                 </p>
               </div>
             </div>
@@ -318,7 +318,7 @@
               <div class="icon-box">
                 <h4 class="title">Intuit23</h4>
                 <p class="description">
-                 Our team won Best Innovation Project Award in Intuit23 Project exhibition.  
+                 Our team won Best Innovation Project Award in Intuit'23 Project exhibition.  
                 </p>
               </div>
             </div>
@@ -343,7 +343,7 @@
               <div class="icon-box">
                 <a href="https://drive.google.com/file/d/1UXcyW6ZnkIwRywmz52WUD1sAl8mNKbfU/view?usp=sharing"><h4 class="title">Intuit22</h4></a>
                 <p class="description">
-                  Won 1st prize in Intuit22 project exhibition for our project on Hyperspectral Image Compression organized by CIT. 
+                  Won 1st prize in Intuit'22 project exhibition for our project on Hyperspectral Image Compression organized by CIT. 
                 </p>
               </div>
             </div>
@@ -492,7 +492,7 @@
             <div class="col-lg-4 col-md-6 portfolio-item filter-js">
               <div class="portfolio-wrap">
                 <img
-                  src="https://images.unsplash.com/photo-1524678606370-a47ad25cb82a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=869&q=80"
+                  src="https://images.unsplash.com/photo-1618472733970-e1d281b2b2e5?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80"
                   class="img-fluid"
                   alt=""
                 />
