--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
     <title>Tarun Jain</title>
+    <meta name="google-site-verification" content="LFhCdZOTw6lKMg08Ae_Mad6aRYQ3SAGqMNQ4RuzMJ40" />
     <meta content="" name="descriptison" />
     <meta content="" name="keywords" />
 
