--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <img
               src="img/banner.svg"
               class="img-fluid animated"
-              alt="tarun-jain"
+              alt="Tarun R Jain"
               width="70%"/>
           </div>
         </div>
@@ -82,7 +82,7 @@
         <div class="container">
           <div class="row justify-content-between">
             <div class="col-lg-6 pt-5 pt-lg-0">
-              <img src="img/about-me.svg" class="img-fluid animated" alt="tarun-jain"/>
+              <img src="img/tarunjain.jpg" class="img-fluid animated" alt="Tarun Jain"/>
               </div>
             <div class="col-lg-6 pt-5 pt-lg-0 order-2 order-lg-1">
               <h3 data-aos="fade-up">About Me</h3>
