--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
             </div>
           <div class="col-lg-6 order-1 order-lg-1">
             <img
-              src="img/banner.svg"
-              class="img-fluid animated"
+              src="img/trj.jpg"
+              class="img-fluid"
               alt="Tarun R Jain"
               width="70%"/>
           </div>
