--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               <a href="https://drive.google.com/drive/folders/19EyJtfC9z5ggOfIk9rRlFIlFEpwb8qil?usp=sharing" target="_blank">Resume</a>
             </li>
             <li class="get-started">
-              <a href="https://drive.google.com/drive/folders/1NKa-bodoFWFlH9b3i9cWyhG7l55t6krc?usp=sharing" target="_blank">Certifications</a>
+              <a href="https://www.youtube.com/@AIwithTarun" target="_blank">AI with Tarun</a>
             </li>
           </ul>
         </nav>
