about and newsletter update

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <div class="col-lg-6 pt-5 pt-lg-0 order-2 order-lg-1">
             <h3>Its Me...</h3>
             <h2>Tarun Jain</h2>
-            <h4 class="col-mt-4">GSoC'23 caMicroscope <br/> DevRel & Community Manager at AI Planet</h4>
+            <h4 class="col-mt-4"> DevRel🥑 @AI Planet <br/> Community Lead🤗 @Embedchain.ai <br/> GDE in ML🚀 </h4>
             <a href="#about" class="btn-get-started">Know more</a>          
             </div>
           <div class="col-lg-6 order-1 order-lg-1">
@@ -609,7 +609,7 @@
                     ><i class="icofont-web"></i
                   ></a>
                   <h4>Newsletter</h4>
-                  <p><a href="./newsletter.html">Subscribe to my Newsletter</a></p>
+                  <p><a href="https://tarunjain.gumroad.com/l/rdnin">Subscribe to my Newsletter</a></p>
                 </div>
               </div>
             </div>
