add new speakers opportunity details

--- a/index.html
+++ b/index.html
@@ -61,9 +61,10 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-6 pt-5 pt-lg-0 order-2 order-lg-1">
-            <h3>Its Me...</h3>
-            <h2>Tarun Jain</h2>
-            <h4 class="col-mt-4"> DevRel🥑 @AI Planet <br/> Community Lead🤗 @Embedchain.ai <br/> GDE in ML🚀 </h4>
+            <br/>
+            <h3>It's Me... <br/> Tarun Jain</h3>
+            <br/>
+            <h4 class="col-mt-4"> DevRel @AI Planet🥑 || <br/> Community Lead @Embedchain.ai🤗|| <br/> GDE in ML🚀 </h4>
             <a href="#about" class="btn-get-started">Know more</a>          
             </div>
           <div class="col-lg-6 order-1 order-lg-1">
@@ -96,7 +97,7 @@
                 If you're interested in collaborating on a project or discussing a coding challenge, feel free to reach out to me.
               </p>
               <p data-aos="fade-up" data-aos-delay="90">
-               I'm always excited to connect with fellow coders and learn from others. Thanks for stopping by!
+               My Tech Stack: TensorFlow, PyTorch, Transformers, Generative AI, Large Language Models, Langchain, LlamaIndex
                 </p>  
             </div>
           </div>
@@ -113,6 +114,45 @@
           </div>
 
           <div class="row">
+          <div
+              class="col-md-6 col-lg-3 d-flex align-items-stretch"
+              data-aos="zoom-in"
+              data-aos-delay="400"
+            ><a href="https://devfest.gdgbbsr.in/speakers">
+              <div class="icon-box">
+                <h4 class="title">DevFest Bhubaneshwar 2023</h4>
+                <p class="description">
+                   In the event, I will speak about Parameter Efficient Fine Tuning of Large Language models along with the code demo.
+                </p>
+              </div>
+            </a>
+            </div>
+          <div
+              class="col-md-6 col-lg-3 d-flex align-items-stretch"
+              data-aos="zoom-in"
+              data-aos-delay="400"
+            ><a href="https://www.eventbrite.com/e/pie-ai-bangalore-langchain-recipes-tickets-689696118657?aff=oddtdtcreator">
+              <div class="icon-box">
+                <h4 class="title">Langchain Recipes</h4>
+                <p class="description">
+                  In this event, I explained the basic components used in Langchain and at the end of my session I demonstrated a Q&A project. 
+                </p>
+              </div>
+            </a>
+            </div>
+            <div
+              class="col-md-6 col-lg-3 d-flex align-items-stretch"
+              data-aos="zoom-in"
+              data-aos-delay="400"
+            ><a href="https://keras-community-day-bangalore.webflow.io/#Speakers-TFUG">
+              <div class="icon-box">
+                <h4 class="title">Keras Community Days Bangalore 2023</h4>
+                <p class="description">
+                   As a Co-organizer to this event, I moderated Panel Discussion on <strong>How can GenAI Startup from India scale</strong>. 
+                </p>
+              </div>
+            </a>
+            </div>
             <div
               class="col-md-6 col-lg-3 d-flex align-items-stretch"
               data-aos="zoom-in"
@@ -175,11 +215,14 @@
               data-aos="zoom-in"
               data-aos-delay="400"
             >
+            <a href="https://lu.ma/embedchain-workshop6">
               <div class="icon-box">
-                <h4 class="title"><a>Recur Loop</a></h4>
+                <h4 class="title">AI Workshop by Embedchain.AI</h4>
                 <p class="description">
-                  Recur Loop is a coding competition that I conducted as a Coding Ninjas Campus Ambassador</p>
+                I mentored students on AI Workshop to Build ChatGPT-like Chatbot from Scratch using Embedchain and Gradio. 
+                  </p>
               </div>
+              </a>
             </div>
             <div
               class="col-md-6 col-lg-3 d-flex align-items-stretch"
@@ -242,19 +285,6 @@
                 <h4 class="title">Object Tracking Bootcamp</h4>
                 <p class="description">
                   This Bootcamp was focused on educating the audience about Object Detection and Object Tracking. We worked on Vehicle tracking
-                </p>
-              </div>
-            </a>
-            </div>
-            <div
-              class="col-md-6 col-lg-3 d-flex align-items-stretch"
-              data-aos="zoom-in"
-              data-aos-delay="400"
-            ><a href="https://www.eventbrite.com/e/pie-ai-bangalore-langchain-recipes-tickets-689696118657?aff=oddtdtcreator">
-              <div class="icon-box">
-                <h4 class="title">Langchain Recipes</h4>
-                <p class="description">
-                  In this event, I explained the basic components used in Langchain and at the end of my session I demonstrated a Q&A project. 
                 </p>
               </div>
             </a>
@@ -592,8 +622,8 @@
               <div class="info">
                 <div class="address">
                  <i class="icofont-unique-idea"></i>
-                  <h4>EkSauEk:</h4>
-                  <p>Coming soon...</p>
+                  <h4>AI With Tarun:</h4>
+                  <p><a href="https://www.youtube.com/@AIwithTarun">Subscribe...</a></p>
                 </div>
 
                 <div class="email">
